name:                koko
version:             0.1.0.0
synopsis:            Koko (aka `::') is a shell-friendly one-liner lingo.
homepage:            http://less.rest/~koko
license:             GPL-3
license-file:        LICENSE
author:              Mikael Brockman
maintainer:          mikael@brockman.se
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Koko
  build-depends: base >=4.7 && <4.8
  default-language: Haskell2010

executable "::"
  main-is: Main.hs
  build-depends: base >=4.7 && <4.8,
                 koko
  default-language:    Haskell2010

test-suite tests
   hs-source-dirs: test
   main-is: Tests.hs
   ghc-options: -Wall
   default-extensions: OverloadedStrings
   type: exitcode-stdio-1.0
   build-depends: base >=4.7 && <4.8,
                  koko,
                  hspec >= 1.8
   default-language: Haskell2010