name:                koko
version:             0.1.0.0
synopsis:            Koko (aka `::') is a shell-friendly one-liner lingo.
homepage:            http://less.rest/~koko
license:             GPL-3
license-file:        LICENSE
author:              Mikael Brockman
maintainer:          mikael@brockman.se
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Koko,
    Koko.Types,
    Koko.Parser,
    Koko.Friendly
  build-depends:
    base == 4.*,
    parsec == 3.1.*,
    either == 4.3.*,
    mtl == 2.2.*,
    free == 4.10.*,
    bound == 1.0.*,
    prelude-extras == 0.4.*,
    MonadPrompt == 1.0.*,
    haskeline == 0.7.*,
    ansi-wl-pprint == 0.6.*
  default-language: Haskell2010

executable "::"
  main-is: Main.hs
  build-depends:
    base == 4.*,
    koko
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs: src test
  main-is: Tests.hs
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    koko,
    directory -any,
    bytestring -any,
    hspec >= 2.0,
    parsec == 3.1.*,
    either == 4.3.*,
    mtl == 2.2.*,
    free == 4.10.*,
    bound == 1.0.*,
    prelude-extras == 0.4.*,
    MonadPrompt == 1.0.*,
    haskeline == 0.7.*,
    ansi-wl-pprint == 0.6.*
  default-language: Haskell2010